updated block content

--- a/pyneCoin.ipynb
+++ b/pyneCoin.ipynb
@@ -26,6 +26,9 @@
     "class Block:\n",
     "    def __init__(self, data):\n",
     "        self.index = data['index']\n",
+    "        self.timestamp = data['timestamp']\n",
+    "        self.content = data['content']\n",
+    "        self.previous_hash = datap['previous_hash']\n",
     "        self.hash = self.hash_block(data)\n",
     "        \n",
     "    def hash_block(self, data):\n",
